Fix restart policy to valid value: Always

--- a/chart/templates/workers/placeholder/placeholder-statefulset.yaml
+++ b/chart/templates/workers/placeholder/placeholder-statefulset.yaml
@@ -96,7 +96,7 @@ spec:
       tolerations: {{- toYaml $tolerations | nindent 8 }}
       topologySpreadConstraints: {{- toYaml $topologySpreadConstraints | nindent 8 }}
       terminationGracePeriodSeconds: 0
-      restartPolicy: Never
+      restartPolicy: Always
       serviceAccountName: {{ include "worker.serviceAccountName" . }}
       {{- if or .Values.registry.secretName .Values.registry.connection }}
       imagePullSecrets:
