--- a/airflow/providers/databricks/provider.yaml
+++ b/airflow/providers/databricks/provider.yaml
@@ -109,6 +109,12 @@ integrations:
       - /docs/apache-airflow-providers-databricks/operators/repos_delete.rst
     logo: /integration-logos/databricks/Databricks.png
     tags: [service]
+  - integration-name: Databricks Workflow
+    external-doc-url: https://docs.databricks.com/en/workflows/index.html
+    how-to-guide:
+      - /docs/apache-airflow-providers-databricks/operators/workflow.rst
+    logo: /integration-logos/databricks/Databricks.png
+    tags: [service]
 
 operators:
   - integration-name: Databricks
@@ -120,9 +126,9 @@ operators:
   - integration-name: Databricks Repos
     python-modules:
       - airflow.providers.databricks.operators.databricks_repos
-  - integration-name: Databricks Workflows
+  - integration-name: Databricks Workflow
     python-modules:
-      - airflow.providers.databricks.operators.workflow
+      - airflow.providers.databricks.operators.databricks_workflow
 
 hooks:
   - integration-name: Databricks
