--- a/chart/templates/secrets/git-ssh-key-secret.yaml
+++ b/chart/templates/secrets/git-ssh-key-secret.yaml
@@ -17,11 +17,18 @@
  under the License.
 */}}
 
-{{- if .Values.dags.gitSync.sshKeySecret }}
+{{- if and .Values.dags.gitSync.gitSshKey .Values.dags.gitSync.enabled}}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: git-sync-ssh-key
+  labels:
+    release: {{ .Release.Name }}
+    chart: {{ .Chart.Name }}
+    heritage: {{ .Release.Service }}
+    {{- with .Values.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
+  name: airflow-ssh-secret
 data:
-  gitSshKey: {{ .Values.dags.gitSync.sshKeySecret | b64enc | quote }}
+  gitSshKey: {{ .Values.dags.gitSync.gitSshKey | quote }}
 {{- end }}
