--- a/airflow/providers/yandex/provider.yaml
+++ b/airflow/providers/yandex/provider.yaml
@@ -51,9 +51,9 @@ versions:
 
 dependencies:
   - apache-airflow>=2.7.0
-  # yandexclod 0.289.0 breaks compatibility for dataproc integration
+  # The 0.289 and 0.290 versions have broken dataproc support
   # See https://github.com/yandex-cloud/python-sdk/issues/103
-  - yandexcloud>=0.278.0,<0.289.0
+  - yandexcloud>=0.278.0,!=0.289.0,!=0.290.0
   - yandex-query-client>=0.1.4
 
 integrations:
