add secret when git ssh key is added

--- a/chart/templates/secrets/git-ssh-key-secret.yaml
+++ b/chart/templates/secrets/git-ssh-key-secret.yaml
@@ -28,7 +28,7 @@ metadata:
     {{- with .Values.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
-  name: airflow-ssh-secret
+  name: {{ template "git_sync_ssh_key" . }}
 data:
   gitSshKey: {{ .Values.dags.gitSync.gitSshKey | quote }}
 {{- end }}
