--- a/tests/deprecations_ignore.yml
+++ b/tests/deprecations_ignore.yml
@@ -215,6 +215,7 @@
 - tests/providers/amazon/aws/operators/test_appflow.py::test_run
 - tests/providers/amazon/aws/operators/test_base_aws.py::TestAwsBaseOperator::test_conflicting_region_name
 - tests/providers/amazon/aws/operators/test_batch.py::TestBatchOperator::test_override_not_sent_if_not_set
+- tests/providers/amazon/aws/operators/test_eks.py::TestEksPodOperator::test_on_finish_action_handler
 - tests/providers/amazon/aws/operators/test_emr_create_job_flow.py::TestEmrCreateJobFlowOperator::test_create_job_flow_deferrable
 - tests/providers/amazon/aws/operators/test_emr_create_job_flow.py::TestEmrCreateJobFlowOperator::test_execute_returns_job_id
 - tests/providers/amazon/aws/operators/test_emr_create_job_flow.py::TestEmrCreateJobFlowOperator::test_execute_with_wait
