--- a/chart/templates/_helpers.yaml
+++ b/chart/templates/_helpers.yaml
@@ -199,7 +199,7 @@ If release name contains chart name it will be used as a full name.
   imagePullPolicy: {{ .Values.images.gitSync.pullPolicy }}
   securityContext: {{- include "localContainerSecurityContext" .Values.dags.gitSync | nindent 4 }}
   env:
-    {{- if or .Values.dags.gitSync.sshKeySecret .Values.dags.gitSync.gitSshKey }}
+    {{- if or .Values.dags.gitSync.sshKeySecret .Values.dags.gitSync.sshKey }}
     - name: GIT_SSH_KEY_FILE
       value: "/etc/git-secret/ssh"
     - name: GITSYNC_SSH_KEY_FILE
@@ -294,7 +294,7 @@ If release name contains chart name it will be used as a full name.
   volumeMounts:
   - name: dags
     mountPath: /git
-  {{- if or .Values.dags.gitSync.sshKeySecret .Values.dags.gitSync.gitSshKey }}
+  {{- if or .Values.dags.gitSync.sshKeySecret .Values.dags.gitSync.sshKey }}
   - name: git-sync-ssh-key
     mountPath: /etc/git-secret/ssh
     readOnly: true
