--- a/chart/templates/secrets/git-ssh-key-secret.yaml
+++ b/chart/templates/secrets/git-ssh-key-secret.yaml
@@ -17,7 +17,7 @@
  under the License.
 */}}
 
-{{- if and .Values.dags.gitSync.gitSshKey .Values.dags.gitSync.enabled}}
+{{- if and .Values.dags.gitSync.sshKey .Values.dags.gitSync.enabled}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -30,5 +30,5 @@ metadata:
     {{- end }}
   name: {{ template "git_sync_ssh_key" . }}
 data:
-  gitSshKey: {{ .Values.dags.gitSync.gitSshKey | quote }}
+  gitSshKey: {{ .Values.dags.gitSync.sshKey | quote }}
 {{- end }}
