Add Codecov token
Codecov4 requires to use upload token for all runs running directly
from the repository (the exceptions are Pull Requests from forks
to public repositories). I generated upload token and configured it
as a secret, so now what we need is to enable it during the upload.

--- a/.github/actions/post_tests_success/action.yml
+++ b/.github/actions/post_tests_success/action.yml
@@ -36,6 +36,8 @@ runs:
         mv ./files/coverage*.xml ./files/coverage-reposts/ || true
     - name: "Upload all coverage reports to codecov"
       uses: codecov/codecov-action@v4
+      env:
+        CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
       if: env.ENABLE_COVERAGE == 'true' && env.TEST_TYPES != 'Helm'
       with:
         name: coverage-${{env.JOB_ID}}
