--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -1267,9 +1267,9 @@ ARG DEFAULT_CONSTRAINTS_BRANCH="constraints-main"
 # It can also be overwritten manually by setting the AIRFLOW_CI_BUILD_EPOCH environment variable.
 ARG AIRFLOW_CI_BUILD_EPOCH="10"
 ARG AIRFLOW_PRE_CACHED_PIP_PACKAGES="true"
-ARG AIRFLOW_PIP_VERSION=24.0
+ARG AIRFLOW_PIP_VERSION=24.1b2
 ARG AIRFLOW_UV_VERSION=0.2.10
-ARG AIRFLOW_USE_UV="true"
+ARG AIRFLOW_USE_UV="false"
 # Setup PIP
 # By default PIP install run without cache to make image smaller
 ARG PIP_NO_CACHE_DIR="true"
@@ -1291,9 +1291,9 @@ ARG AIRFLOW_VERSION=""
 # Additional PIP flags passed to all pip install commands except reinstalling pip itself
 ARG ADDITIONAL_PIP_INSTALL_FLAGS=""
 
-ARG AIRFLOW_PIP_VERSION=24.0
+ARG AIRFLOW_PIP_VERSION=24.1b2
 ARG AIRFLOW_UV_VERSION=0.2.10
-ARG AIRFLOW_USE_UV="true"
+ARG AIRFLOW_USE_UV="false"
 
 ENV AIRFLOW_REPO=${AIRFLOW_REPO}\
     AIRFLOW_BRANCH=${AIRFLOW_BRANCH} \
