--- a/chart/templates/triggerer/triggerer-deployment.yaml
+++ b/chart/templates/triggerer/triggerer-deployment.yaml
@@ -73,8 +73,8 @@ spec:
   {{- if and (not $persistence) (.Values.triggerer.strategy) }}
   strategy: {{- toYaml .Values.triggerer.strategy | nindent 4 }}
   {{- end }}
-  {{- if and $persistence .Values.triggerer.persistence.persistentVolumeClaimRetentionPolicy -}}
-  persistentVolumeClaimRetentionPolicy: {{ .Values.triggerer.persistence.persistentVolumeClaimRetentionPolicy | nindent 4 }}
+  {{- if and $persistence .Values.triggerer.persistence.persistentVolumeClaimRetentionPolicy }}
+  persistentVolumeClaimRetentionPolicy: {{- toYaml .Values.triggerer.persistence.persistentVolumeClaimRetentionPolicy  | nindent 4 }}
   {{- end }}
   template:
     metadata:
