--- a/chart/templates/workers/worker-deployment.yaml
+++ b/chart/templates/workers/worker-deployment.yaml
@@ -66,8 +66,8 @@ spec:
   {{- if $revisionHistoryLimit }}
   revisionHistoryLimit: {{ $revisionHistoryLimit }}
   {{- end }}
-  {{- if and $persistence .Values.workers.persistence.persistentVolumeClaimRetentionPolicy -}}
-  persistentVolumeClaimRetentionPolicy: {{ .Values.workers.persistence.persistentVolumeClaimRetentionPolicy | nindent 4 }}
+  {{- if and $persistence .Values.workers.persistence.persistentVolumeClaimRetentionPolicy }}
+  persistentVolumeClaimRetentionPolicy: {{- toYaml .Values.workers.persistence.persistentVolumeClaimRetentionPolicy  | nindent 4 }}
   {{- end }}
   selector:
     matchLabels:
