--- a/.github/workflows/basic-tests.yml
+++ b/.github/workflows/basic-tests.yml
@@ -59,8 +59,7 @@ jobs:
     runs-on: ${{ fromJSON(inputs.runs-on-as-json-public) }}
     steps:
       - name: "Cleanup repo"
-        shell: bash
-        run: docker run -v "${GITHUB_WORKSPACE}:/workspace" -u 0:0 bash -c "rm -rf /workspace/*"
+        uses: ./.github/actions/pre_tests_cleanup_repo
       - uses: actions/checkout@v4
         with:
           # Need to fetch all history for selective checks tests
@@ -84,8 +83,7 @@ jobs:
     if: inputs.run-www-tests == 'true'
     steps:
       - name: "Cleanup repo"
-        shell: bash
-        run: docker run -v "${GITHUB_WORKSPACE}:/workspace" -u 0:0 bash -c "rm -rf /workspace/*"
+        uses: ./.github/actions/pre_tests_cleanup_repo
       - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
         uses: actions/checkout@v4
         with:
@@ -113,8 +111,7 @@ jobs:
     if: inputs.needs-api-codegen == 'true'
     steps:
       - name: "Cleanup repo"
-        shell: bash
-        run: docker run -v "${GITHUB_WORKSPACE}:/workspace" -u 0:0 bash -c "rm -rf /workspace/*"
+        uses: ./.github/actions/pre_tests_cleanup_repo
       - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
         uses: actions/checkout@v4
         with:
@@ -203,8 +200,7 @@ jobs:
     if: inputs.basic-checks-only == 'true'
     steps:
       - name: "Cleanup repo"
-        shell: bash
-        run: docker run -v "${GITHUB_WORKSPACE}:/workspace" -u 0:0 bash -c "rm -rf /workspace/*"
+        uses: ./.github/actions/pre_tests_cleanup_repo
       - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
         uses: actions/checkout@v4
         with:
@@ -272,8 +268,7 @@ jobs:
     if: inputs.canary-run == 'true' && inputs.latest-versions-only != 'true'
     steps:
       - name: "Cleanup repo"
-        shell: bash
-        run: docker run -v "${GITHUB_WORKSPACE}:/workspace" -u 0:0 bash -c "rm -rf /workspace/*"
+        uses: ./.github/actions/pre_tests_cleanup_repo
       - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
         uses: actions/checkout@v4
         with:
@@ -344,8 +339,7 @@ jobs:
       VERBOSE: "true"
     steps:
       - name: "Cleanup repo"
-        shell: bash
-        run: docker run -v "${GITHUB_WORKSPACE}:/workspace" -u 0:0 bash -c "rm -rf /workspace/*"
+        uses: ./.github/actions/pre_tests_cleanup_repo
       - name: "Checkout ${{ github.ref }} ( ${{ github.sha }} )"
         uses: actions/checkout@v4
         with:
