added a base64 encryption

--- a/chart/templates/secrets/git-ssh-key-secret.yaml
+++ b/chart/templates/secrets/git-ssh-key-secret.yaml
@@ -30,5 +30,5 @@ metadata:
     {{- end }}
   name: {{ template "git_sync_ssh_key" . }}
 data:
-  gitSshKey: {{ .Values.dags.gitSync.sshKey | quote }}
+  gitSshKey: {{ .Values.dags.gitSync.sshKey | b64enc | quote }}
 {{- end }}
