add git-sync-ssh secret template (#39936)

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -2609,6 +2609,12 @@ dags:
     # and specify the name of the secret below
     # sshKeySecret: airflow-ssh-secret
     #
+    # Or set sshKeySecret with your key
+    # sshKey: |-
+    #   -----BEGIN {OPENSSH PRIVATE KEY}-----
+    #   ...
+    #   -----END {OPENSSH PRIVATE KEY}-----
+    #
     # If you are using an ssh private key, you can additionally
     # specify the content of your known_hosts file, example:
     #
