--- a/airflow/providers/databricks/provider.yaml
+++ b/airflow/providers/databricks/provider.yaml
@@ -76,6 +76,7 @@ dependencies:
   - pandas>=2.1.2,<2.2;python_version>="3.9"
   - pandas>=1.5.3,<2.2;python_version<"3.9"
   - pyarrow>=14.0.1
+  - azure-identity>=1.3.1
 
 additional-extras:
   # pip install apache-airflow-providers-databricks[sdk]
