--- a/chart/templates/_helpers.yaml
+++ b/chart/templates/_helpers.yaml
@@ -224,7 +224,7 @@ If release name contains chart name it will be used as a full name.
       value: "false"
     {{- end }}
     {{ else if .Values.dags.gitSync.credentialsSecret }}
-    {{ if int (regexFind "[0-9]+" .Values.images.gitSync.tag) < 4 }}
+    {{- if int (regexFind "[0-9]+" .Values.images.gitSync.tag) < 4 }}
     - name: GIT_SYNC_USERNAME
       valueFrom:
         secretKeyRef:
@@ -235,7 +235,7 @@ If release name contains chart name it will be used as a full name.
         secretKeyRef:
           name: {{ .Values.dags.gitSync.credentialsSecret | quote }}
           key: GIT_SYNC_PASSWORD
-    {{- end }}
+    {{- else }}
     - name: GITSYNC_USERNAME
       valueFrom:
         secretKeyRef:
@@ -246,6 +246,7 @@ If release name contains chart name it will be used as a full name.
         secretKeyRef:
           name: {{ .Values.dags.gitSync.credentialsSecret | quote }}
           key: GITSYNC_PASSWORD
+    {{- end }}
     {{- end }}
     - name: GIT_SYNC_REV
       value: {{ .Values.dags.gitSync.rev | quote }}
