--- a/airflow/providers/databricks/provider.yaml
+++ b/airflow/providers/databricks/provider.yaml
@@ -76,7 +76,7 @@ dependencies:
   - pandas>=2.1.2,<2.2;python_version>="3.9"
   - pandas>=1.5.3,<2.2;python_version<"3.9"
   - pyarrow>=14.0.1
-  - azure-identity>=1.3.1
+
 
 additional-extras:
   # pip install apache-airflow-providers-databricks[sdk]
@@ -84,6 +84,10 @@ additional-extras:
     description: Install Databricks SDK
     dependencies:
       - databricks-sdk==0.10.0
+  - name: azure-identity
+    description: Install Azure Identity client library
+    dependencies:
+      - azure-identity>=1.3.1
 
 devel-dependencies:
   - deltalake>=0.12.0
