--- a/.github/workflows/ci-teradata-main-systemtest-dashboard.yml
+++ b/.github/workflows/ci-teradata-main-systemtest-dashboard.yml
@@ -62,8 +62,9 @@ jobs:
             cp .github/workflows/system-tests-files/report_index_template.html .
             cp .github/workflows/system-tests-files/report_parse_xml.py .
       - name: "Download System Test Log Report"
-        uses: actions/download-artifact@v4
+        uses: dawidd6/action-download-artifact@v3
         with:
+          workflow: ci-teradata-main-systemtest-dashboard.yml
           name: airflow-system-test-report
           path: .
       - name: "Define CSAE env name"
