--- a/chart/templates/_helpers.yaml
+++ b/chart/templates/_helpers.yaml
@@ -224,7 +224,7 @@ If release name contains chart name it will be used as a full name.
       value: "false"
     {{- end }}
     {{ else if .Values.dags.gitSync.credentialsSecret }}
-    {{- if int (regexFind "[0-9]+" .Values.images.gitSync.tag) < 4 }}
+    {{- if semverCompare "<v4.0.0" .Values.images.gitSync.tag }}
     - name: GIT_SYNC_USERNAME
       valueFrom:
         secretKeyRef:
