--- a/.github/workflows/ci-teradata-teradata-main-sync.yaml
+++ b/.github/workflows/ci-teradata-teradata-main-sync.yaml
@@ -31,4 +31,5 @@ jobs:
 
       - name: Push changes to forked branch
         run: |
+          git remote add upstream https://github.com/Teradata/airflow.git
           git push origin HEAD:teradata_main
