--- a/.github/workflows/ci-teradata-teradata-main-sync.yaml
+++ b/.github/workflows/ci-teradata-teradata-main-sync.yaml
@@ -32,4 +32,4 @@ jobs:
       - name: Push changes to forked branch
         run: |
           git remote add upstream https://github.com/Teradata/airflow.git
-          git push origin HEAD:teradata_main
+          git push
