--- a/.github/workflows/ci-teradata-teradata-main-sync.yaml
+++ b/.github/workflows/ci-teradata-teradata-main-sync.yaml
@@ -31,7 +31,5 @@ jobs:
 
       - name: Push changes to forked branch
         run: |
-          git config --global user.name "satish-chinthanippu"
-          git config --global user.email "satishchinthanippu@gmail.com"
-          git remote set-url origin https://github.com/Teradata/airflow.git
+          git remote set-url origin https://satish-chinthanippu:${{ secrets.GIT_SYNC_PUSH_KEY }}@https://github.com/Teradata/airflow.git
           git push origin teradata_main
