--- a/.github/workflows/ci-teradata-teradata_main-systemtest.yml
+++ b/.github/workflows/ci-teradata-teradata_main-systemtest.yml
@@ -35,6 +35,9 @@ jobs:
         run: docker run -v "${GITHUB_WORKSPACE}:/workspace" -u 0:0 bash -c "rm -rf /workspace/*"
       - name: "Checkout Teradata Airflow Source Code"
         uses: actions/checkout@v4
+        with:
+          ref: teradata_main
+          persist-credentials: false
       - name: "Github Event and Branch Details"
         run: echo "The current checked out branch is $GITHUB_REF. Workflow trigged Event- ${{ github.event_name  }}. The fully qualified reference (ref) branch that triggered the workflow run- ${{ github.ref }}"
       - name: "Install Python"
