--- a/.github/workflows/ci-teradata-push-branch-documentation-unit-tests.yml
+++ b/.github/workflows/ci-teradata-push-branch-documentation-unit-tests.yml
@@ -20,7 +20,8 @@
     on:
       push:
         branches:
-          - IDE-*
+          - IDE-compute_cluster
+      workflow_dispatch:
     permissions:
       contents: write
       pages: write
@@ -34,6 +35,9 @@
             run: docker run -v "${GITHUB_WORKSPACE}:/workspace" -u 0:0 bash -c "rm -rf /workspace/*"
           - name: "Checkout Teradata Airflow Source Code"
             uses: actions/checkout@v4
+            with:
+              ref: IDE-compute_cluster
+              persist-credentials: false
           - name: "Github Event and Branch Details"
             run: echo "The current checked out branch is $GITHUB_REF. Workflow trigged Event- ${{ github.event_name  }}. The fully qualified reference (ref) branch that triggered the workflow run- ${{ github.ref }}. The value of github.event.ref - ${{github.event.ref}}"          
           - name: "Install Python"
