--- a/airflow/providers/databricks/provider.yaml
+++ b/airflow/providers/databricks/provider.yaml
@@ -78,12 +78,17 @@ dependencies:
   - pandas>=1.5.3,<2.2;python_version<"3.9"
   - pyarrow>=14.0.1
 
+
 additional-extras:
   # pip install apache-airflow-providers-databricks[sdk]
   - name: sdk
     description: Install Databricks SDK
     dependencies:
       - databricks-sdk==0.10.0
+  - name: azure-identity
+    description: Install Azure Identity client library
+    dependencies:
+      - azure-identity>=1.3.1
 
 devel-dependencies:
   - deltalake>=0.12.0
