--- a/chart/templates/_helpers.yaml
+++ b/chart/templates/_helpers.yaml
@@ -309,8 +309,9 @@ If release name contains chart name it will be used as a full name.
   {{- if .Values.dags.gitSync.extraVolumeMounts }}
     {{- tpl (toYaml .Values.dags.gitSync.extraVolumeMounts) . | nindent 2 }}
   {{- end }}
-  {{- if and .Values.dags.gitSync.containerLifecycleHooks (not .is_init) }}
-  lifecycle: {{- tpl (toYaml .Values.dags.gitSync.containerLifecycleHooks) . | nindent 4 }}
+  {{- $containerLifecycleHooksGitSync := or .Values.dags.gitSync.containerLifecycleHooks .Values.containerLifecycleHooks }}
+  {{- if and $containerLifecycleHooksGitSync (not .is_init) }}
+  lifecycle: {{- tpl $containerLifecycleHooksGitSync . | nindent 4 }}
   {{- end }}
 {{- end }}
 
