--- a/chart/templates/_helpers.yaml
+++ b/chart/templates/_helpers.yaml
@@ -311,7 +311,7 @@ If release name contains chart name it will be used as a full name.
   {{- end }}
   {{- $containerLifecycleHooksGitSync := or .Values.dags.gitSync.containerLifecycleHooks .Values.containerLifecycleHooks }}
   {{- if and $containerLifecycleHooksGitSync (not .is_init) }}
-  lifecycle: {{- tpl $containerLifecycleHooksGitSync . | nindent 4 }}
+  lifecycle: {{- tpl (toYaml $containerLifecycleHooksGitSync) . | nindent 4 }}
   {{- end }}
 {{- end }}
 
